@@ -529,7 +529,6 @@ static const canon_inkset_t canon_9_C4M4Y4K2c4m4plain_inkset[] = {
         {0,0.0,NULL}
 };
 
-/* check this one!!!! */
 static const canon_inkset_t canon_9_C4M4Y4K2c4m4_inkset[] = {
         {'C',1.0,&canon_2b_4l_ink},
         {'M',1.0,&canon_2b_4l_ink},
