@@ -320,6 +320,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA i80    (EXPERIMENTAL)
+       Canon PIXMA i560   (EXPERIMENTAL)
        Canon PIXMA i850   (EXPERIMENTAL) *1
        Canon PIXMA i860   (EXPERIMENTAL) *1
 
